# modellbahncpp

./: .gitignore  .gitmodules  CMakeLists.txt  project.xml
.github/workflows/: ci.yml
app/: CMakeLists.txt
app/board/: board.hpp
app/src/: CMakeLists.txt  main.cpp
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake  ToolChain.cmake
modellbahn/: CMakeLists.txt
modellbahn/expansion/: controller.hpp
modellbahn/inc/: board.hpp
modellbahn/src/: board.cpp  main.cpp  simulation.cpp
modellbahn/track/: layout.hpp  straight.hpp  switch.hpp  track.hpp  trackid.hpp
modm/: CMakeLists.txt  gdbinit  openocd.cfg
modm/cmake/: ModmConfiguration.cmake
modm/ext/freertos/: modm_port.cpp
modm/ext/freertos/inc/freertos/: FreeRTOSConfig.h
modm/ext/gcc/: new_delete.cpp
modm/link/: linkerscript.ld
modm/src/modm/: platform.hpp  processing.hpp
modm/src/modm/architecture/: interface.hpp
modm/src/modm/board/: board.cpp  board.hpp
modm/src/modm/math/: units.hpp
modm/src/modm/platform/: device.hpp
modm/src/modm/platform/clock/: rcc.cpp  rcc.hpp  rcc_impl.hpp  systick_timer.cpp  systick_timer.hpp
modm/src/modm/platform/core/: peripherals.hpp  reset_handler.sx  startup.c  startup_platform.c  vectors.c  vectors.hpp
modm/src/modm/platform/dma/: dma.cpp  dma.hpp  dma_base.hpp  dma_hal.hpp  dma_hal_impl.hpp
modm/src/modm/platform/gpio/: base.hpp  data.hpp  unused.hpp
modm/src/modm/platform/itm/: itm.cpp  itm.hpp
modm/src/modm/platform/spi/: spi_hal_3.hpp  spi_hal_3_impl.hpp  spi_master_3.cpp  spi_master_3.hpp  (+2 more)
modm/src/modm/processing/: fiber.hpp
(+8 files in other folders)
